# trimkv

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: test_qwen3.py
experiments/: README.md
experiments/benchmarks/: load_model.py  load_vlmodel.py  run_benchmark.py  run_benchmark_vlm.py
experiments/benchmarks/rkv/: __init__.py  adakv_cache.py
experiments/lmms-eval/: README.md  load_model.py  run_benchmark.py  setup.py
experiments/lmms-eval/lmms_eval/: evaluator.py  utils.py
experiments/lmms-eval/rkv/: dynamic_cache.py
experiments/lmms-eval/scripts/: eval_dbtrimkv.sh  eval_text_baselines.sh
experiments/longbench/: README.md  gather_results.py  load_model.py  run_chunked_prefill.py
experiments/longbench/scripts/: run_fullkv.sh  run_locret.sh  run_trimkv.sh
experiments/longbench_v2/: load_model.py  run_chunked_prefill.py  utils.py
experiments/longbench_v2/configs/: model2maxlen.json  model2path.json
experiments/longmemeval/: .gitignore  README.md  generation_utils.py  load_model.py  run_eval.py  run_longmemeval.py
experiments/longproc/: .gitignore  README.md  decoding.py  eval_and_summarize_results.py  example_usage.py  load_model.py  run_longproc.py
experiments/math/: .gitignore  README.md  eval_math.py  generation_utils.py  load_model.py  run_math.py  utils.py
experiments/mmdu/: README.md  load_model.py  meta_prompt.txt  run_eval_mmdu.py  run_eval_mmdu_gemini.py  run_mmdu.py  utils.py
experiments/scbench/: .gitignore  README.md  compute_scores.py  eval_utils.py  load_model.py  run_scbench.py
src/trimkv/: cache_utils.py
train/llm/: README.md  train.py
train/vlm/: README.md  argument.py  precompute_seqlen.py  train.py  trainer.py
(+140 files in other folders)
